--- a/index.html
+++ b/index.html
@@ -4,38 +4,43 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>goit-markup-hw-01</title>
+    <title>goit-markup-hw-02</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/styles.css">
   </head>
   <body>
     <!--section Heaven-->
-    <header>
-      <nav>
-        <a href="/"> <span>web</span> studio</a>
+   <header class="header">
+      <nav  >
+        <a href="./portfolio.html"> <span>WEB</span></a>
+        <a href="./portfolio.html"> <span>STUDIO</span></a>
         <ul>
-          <li><a href="studio">studio</a></li>
-          <li><a href="Portfolio">portfolio</a></li>
+          <li><a href="./index.html">studio</a></li>
+          <li><a href="./portfolio.html">portfolio</a></li>
           <li><a href="Contacts">contacts</a></li>
         </ul>
       </nav>
       <address>
-        <ul>
+        <ul class="address">
           <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
           <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
-      </address>
+      </address> 
     </header>
 
     <!--section 2-->
 
     <main>
-      <section class="button">
-        <h1>effective Solutionsfor Your Business</h1>
-        <button type="button">order service</button>
+      <section class="heading">
+        <h1 class="heading-text">Effective Solutions for Your Business</h1>
+        <button class="botton" type="button"><span class="botton-text">Order service</span></button>
       </section>
 
       <section class="list">
         <h2>ours skills</h2>
-        <ul>
+        <ul class="skill-list">
           <li>
             <h3>Strategy</h3>
             <p>
@@ -69,7 +74,7 @@
 
       <section class="what">
         <h2>What are we doing</h2>
-        <ul>
+        <ul class="what-are-we">
           <li>
             <img src="./img/pcvers.jpg" alt="Web" width="360" height="300" />
           </li>
@@ -87,7 +92,7 @@
     <section class="team">
       <h2>Our Team</h2>
 
-      <ul>
+      <ul class="our">
         <li>
           <img
             src="./img/boy4.jpg"
@@ -118,7 +123,7 @@
 
         <li>
           <img
-            src="./img/boy2.jpg"
+            src="./img/boy1.jpg"
             alt="Daniel Wilson"
             width="264"
             height="260"
@@ -130,7 +135,7 @@
     </section>
     <!--section 5 under-->
 
-    <footer>
+    <footer class="footer">
       <a href="/"> <span>WEB</span> STUDIO</a>
       <p>
         Increase the flow of customers and sales for your business with digital
