--- a/index.html
+++ b/index.html
@@ -5,66 +5,82 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>goit-markup-hw-02</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <!--section Heaven-->
-   <header class="header">
-      <nav  >
-        <a href="./portfolio.html"> <span>WEB</span></a>
-        <a href="./portfolio.html"> <span>STUDIO</span></a>
-        <ul>
-          <li><a href="./index.html">studio</a></li>
-          <li><a href="./portfolio.html">portfolio</a></li>
-          <li><a href="Contacts">contacts</a></li>
+    <!--section header-->
+    <header class="header link">
+      <nav class="header-navigation">
+        <a class="logo link" href="./portfolio.html"
+          ><span class="web">WEB</span>STUDIO</a
+        >
+        <ul class="header-item list">
+          <li><a class="header-link link" href="./index.html">Studio</a></li>
+          <li>
+            <a class="header-link link" href="./portfolio.html">Portfolio</a>
+          </li>
+          <li><a class="header-link link" href="Contacts">Contacts</a></li>
         </ul>
       </nav>
       <address>
-        <ul class="address">
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        <ul class="list">
+          <li class="address-item">
+            <a class="address-link link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="address-item">
+            <a class="address-link link" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
         </ul>
-      </address> 
+      </address>
     </header>
 
     <!--section 2-->
 
     <main>
-      <section class="heading">
+      <section class="skills">
         <h1 class="heading-text">Effective Solutions for Your Business</h1>
-        <button class="botton" type="button"><span class="botton-text">Order service</span></button>
+        <button class="botton" type="button">
+          <span class="botton-text">Order service</span>
+        </button>
       </section>
 
-      <section class="list">
-        <h2>ours skills</h2>
-        <ul class="skill-list">
-          <li>
-            <h3>Strategy</h3>
-            <p>
+      <section class="about">
+        <h2 class="title-skills">Ours skills</h2>
+        <ul class="about-list list">
+          <li class="about-item">
+            <h3 class="about-title">Strategy</h3>
+            <p class="about-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
-          <li>
-            <h3>Punctuality</h3>
-            <p>
+          <li class="about-item">
+            <h3 class="about-title">Punctuality</h3>
+            <p class="about-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
-          <li>
-            <h3>Diligence</h3>
-            <p>
+          <li class="about-item">
+            <h3 class="about-title">Diligence</h3>
+            <p class="about-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
-          <li>
-            <h3>Technologies</h3>
-            <p>
+          <li class="about-item">
+            <h3 class="about-title">Technologies</h3>
+            <p class="about-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -72,16 +88,16 @@
         </ul>
       </section>
 
-      <section class="what">
-        <h2>What are we doing</h2>
-        <ul class="what-are-we">
-          <li>
+      <section class="content">
+        <h2 class="content-title">What are we doing</h2>
+        <ul class="content-list list">
+          <li class="content-pictures">
             <img src="./img/pcvers.jpg" alt="Web" width="360" height="300" />
           </li>
-          <li>
+          <li class="content-pictures">
             <img src="./img/mobvers.jpg" alt="Mob" width="360" height="300" />
           </li>
-          <li>
+          <li class="content-pictures">
             <img src="./img/adapt.jpg" alt="adapt" width="360" height="300" />
           </li>
         </ul>
@@ -89,55 +105,57 @@
     </main>
     <!--section 4 Team-->
 
-    <section class="team">
-      <h2>Our Team</h2>
+    <section class="section-team">
+      <h2 class="team-title">Our Team</h2>
 
-      <ul class="our">
-        <li>
+      <ul class="team-list list">
+        <li class="team-card">
           <img
             src="./img/boy4.jpg"
             alt="Mark Guerrero"
             width="264"
             height="260"
           />
-          <h3>Mark Guerrero</h3>
-          <p>Product Designer</p>
+          <h3 class="item-name">Mark Guerrero</h3>
+          <p class="item-info">Product Designer</p>
         </li>
 
-        <li>
+        <li class="team-card">
           <img src="./img/boy2.jpg" alt="Tom Ford" width="264" height="260" />
-          <h3>Tom Ford</h3>
-          <p>Frontend Developer</p>
+          <h3 class="item-name">Tom Ford</h3>
+          <p class="item-info">Frontend Developer</p>
         </li>
 
-        <li>
+        <li class="team-card">
           <img
             src="./img/boy3.jpg"
             alt="Camila Garcia"
             width="264"
             height="260"
           />
-          <h3>Camila Garcia</h3>
-          <p>Marketing</p>
+          <h3 class="item-name">Camila Garcia</h3>
+          <p class="item-info">Marketing</p>
         </li>
 
-        <li>
+        <li class="team-card">
           <img
             src="./img/boy1.jpg"
             alt="Daniel Wilson"
             width="264"
             height="260"
           />
-          <h3>Daniel Wilson</h3>
-          <p>UI Designer</p>
+          <h3 class="item-name">Daniel Wilson</h3>
+          <p class="item-info">UI Designer</p>
         </li>
       </ul>
     </section>
     <!--section 5 under-->
 
     <footer class="footer">
-      <a href="/"> <span>WEB</span> STUDIO</a>
-      <p>
+      <a class="logo-footer link" href="./portfolio.html"
+        ><span class="web">WEB</span>STUDIO</a
+      >
+      <p class="footer-title">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
