--- a/portfolio.html
+++ b/portfolio.html
@@ -1,49 +1,137 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>portfolio</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/styles.css">
-</head>
-<body>
-    <header>
-        <nav>
-          <a href="/"> <span>web</span> studio</a>
-          <ul>
-            <li><a href="studio">studio</a></li>
-            <li><a href="Portfolio">portfolio</a></li>
-            <li><a href="Contacts">contacts</a></li>
-          </ul>
-        </nav>
-        <address>
-          <ul>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-          </ul>
-        </address> 
-      </header>   
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
+  </head>
+  <body>
+    <header class="header link">
+      <nav class="header-navigation">
+        <a class="logo link" href="./portfolio.html"
+          ><span class="web">WEB</span>STUDIO</a
+        >
+        <ul class="header-item list">
+          <li><a class="header-link link" href="./index.html">Studio</a></li>
+          <li>
+            <a class="header-link link" href="./portfolio.html">Portfolio</a>
+          </li>
+          <li><a class="header-link link" href="Contacts">Contacts</a></li>
+        </ul>
+      </nav>
+      <address>
+        <ul class="list">
+          <li class="address-item">
+            <a class="address-link link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="address-item">
+            <a class="address-link link" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
+        </ul>
+      </address>
+    </header>
+    <main>
+      <section class="filtres-btn">
+        <ul class="btn-list list">
+          <li>
+            <button class="button-item" type="button">
+              <span class="button-text">All</span>
+            </button>
+          </li>
+          <li>
+            <button class="button-item" type="button">
+              <span class="button-text">Web side</span>
+            </button>
+          </li>
+          <li>
+            <button class="button-item" type="button">
+              <span class="button-text">App</span>
+            </button>
+          </li>
+          <li>
+            <button class="button-item" type="button">
+              <span class="button-text">Design</span>
+            </button>
+          </li>
+          <li>
+            <button class="button-item" type="button">
+              <span class="button-text">Marketing</span>
+            </button>
+          </li>
+        </ul>
+      </section>
 
+      <section class="galery">
+        <ul class="galery-list list">
+          <li class="galery-list-item">
+            <img src="./img/fotor.jpg" alt="fotoapp" />
+            <h2 class="galery-title">Banking App Interface Concept</h2>
+            <p class="galery-text">App</p>
+          </li>
+          <li class="galery-list-item">
+            <img src="./img/telefo.jpg" alt="fototel" />
+            <h2 class="galery-title">Cashless Payment</h2>
+            <p class="galery-text">Marketing</p>
+          </li>
+          <li class="galery-list-item">
+            <img src="./img/laptop.jpg" alt="laptop" />
+            <h2 class="galery-title">Meditaion App</h2>
+            <p class="galery-text">App</p>
+          </li>
+          <li class="galery-list-item">
+            <img src="./img/car.jpg" alt="car" />
+            <h2 class="galery-title">Taxi Service</h2>
+            <p class="galery-text">Marketing</p>
+          </li>
+          <li class="galery-list-item">
+            <img src="./img/tele.jpg" alt="telephone" />
+            <h2 class="galery-title">Screen Illustrations</h2>
+            <p class="galery-text">Design</p>
+          </li>
+          <li class="galery-list-item">
+            <img src="./img/girl.jpg" alt="girl" />
+            <h2 class="galery-title">Online Courses</h2>
+            <p class="galery-text">Marketing</p>
+          </li>
+          <li class="galery-list-item">
+            <img src="./img/foto.jpg" alt="foto" />
+            <h2 class="galery-title">Instagram Stories Concept</h2>
+            <p class="galery-text">Design</p>
+          </li>
+          <li class="galery-list-item">
+            <img src="./img/lady.jpg" alt="lady" />
+            <h2 class="galery-title">Organic Food</h2>
+            <p class="galery-text">Web Site</p>
+          </li>
+          <li class="galery-list-item">
+            <img src="./img/coffe.jpg" alt="coffe" />
+            <h2 class="galery-title">Fresh Coffee</h2>
+            <p class="galery-text">Web Site</p>
+          </li>
+        </ul>
+      </section>
+    </main>
 
-
-
-
-
-
-
-
-
-
-      <footer>
-        <a href="/"> <span>WEB</span> STUDIO</a>
-        <p>
-          Increase the flow of customers and sales for your business with digital
-          marketing & growth solutions.
-        </p>
-      </footer>
-</body>
+    <footer class="footer">
+      <a class="logo-footer link" href="./portfolio.html"
+        ><span class="web">WEB</span>STUDIO</a
+      >
+      <p class="footer-title">
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
+    </footer>
+  </body>
 </html>
