--- a/portfolio.html
+++ b/portfolio.html
@@ -76,47 +76,47 @@
       <section class="galery">
         <ul class="galery-list list">
           <li class="galery-list-item">
-            <img src="./img/fotor.jpg" alt="fotoapp" />
+            <img src="./img/fotor.jpg" alt="fotoapp"  width="360"/>
             <h2 class="galery-title">Banking App Interface Concept</h2>
             <p class="galery-text">App</p>
           </li>
           <li class="galery-list-item">
-            <img src="./img/telefo.jpg" alt="fototel" />
+            <img src="./img/telefo.jpg" alt="fototel"  width="360"/>
             <h2 class="galery-title">Cashless Payment</h2>
             <p class="galery-text">Marketing</p>
           </li>
           <li class="galery-list-item">
-            <img src="./img/laptop.jpg" alt="laptop" />
+            <img src="./img/laptop.jpg" alt="laptop"  width="360"/>
             <h2 class="galery-title">Meditaion App</h2>
             <p class="galery-text">App</p>
           </li>
           <li class="galery-list-item">
-            <img src="./img/car.jpg" alt="car" />
+            <img src="./img/car.jpg" alt="car"  width="360"/>
             <h2 class="galery-title">Taxi Service</h2>
             <p class="galery-text">Marketing</p>
           </li>
           <li class="galery-list-item">
-            <img src="./img/tele.jpg" alt="telephone" />
+            <img src="./img/tele.jpg" alt="telephone"  width="360"/>
             <h2 class="galery-title">Screen Illustrations</h2>
             <p class="galery-text">Design</p>
           </li>
           <li class="galery-list-item">
-            <img src="./img/girl.jpg" alt="girl" />
+            <img src="./img/girl.jpg" alt="girl"  width="360"/>
             <h2 class="galery-title">Online Courses</h2>
             <p class="galery-text">Marketing</p>
           </li>
           <li class="galery-list-item">
-            <img src="./img/foto.jpg" alt="foto" />
+            <img src="./img/foto.jpg" alt="foto"  width="360"/>
             <h2 class="galery-title">Instagram Stories Concept</h2>
             <p class="galery-text">Design</p>
           </li>
           <li class="galery-list-item">
-            <img src="./img/lady.jpg" alt="lady" />
+            <img src="./img/lady.jpg" alt="lady"  width="360"/>
             <h2 class="galery-title">Organic Food</h2>
             <p class="galery-text">Web Site</p>
           </li>
           <li class="galery-list-item">
-            <img src="./img/coffe.jpg" alt="coffe" />
+            <img src="./img/coffe.jpg" alt="coffe" width="360" />
             <h2 class="galery-title">Fresh Coffee</h2>
             <p class="galery-text">Web Site</p>
           </li>
