--- a/index.html
+++ b/index.html
@@ -44,18 +44,18 @@
       </address>
     </header>
 
-    <!--section 2-->
-
+    <!--Button-->
     <main>
       <section class="skills">
         <h1 class="heading-text">Effective Solutions for Your Business</h1>
-        <button class="botton" type="button">
-          <span class="botton-text">Order service</span>
-        </button>
+        <button class="button-header" type="button">Order service</button>
       </section>
+    <!--Button-->
 
+
+  <!--SKILLS-->
       <section class="about">
-        <h2 class="title-skills">Ours skills</h2>
+        <h2 class="visually-hidden">Ours skills</h2>
         <ul class="about-list list">
           <li class="about-item">
             <h3 class="about-title">Strategy</h3>
