--- a/portfolio.html
+++ b/portfolio.html
@@ -43,82 +43,89 @@
       </address>
     </header>
     <main>
-      <section class="filtres-btn">
-        <ul class="btn-list list">
+      <section>
+      <h1 class="visually-hidden">Portfolio</h1>
+        <ul class="filtr-btn list">
           <li>
-            <button class="button-item" type="button">
-              <span class="button-text">All</span>
-            </button>
+            <button class="button-item" type="button">All</button>
           </li>
           <li>
-            <button class="button-item" type="button">
-              <span class="button-text">Web side</span>
-            </button>
+            <button class="button-item" type="button">Web side</button>
           </li>
           <li>
-            <button class="button-item" type="button">
-              <span class="button-text">App</span>
-            </button>
+            <button class="button-item" type="button">App</button>
+
           </li>
           <li>
-            <button class="button-item" type="button">
-              <span class="button-text">Design</span>
-            </button>
+            <button class="button-item" type="button">Design</button>
+         
           </li>
           <li>
-            <button class="button-item" type="button">
-              <span class="button-text">Marketing</span>
-            </button>
+            <button class="button-item" type="button">Marketing </button>          
           </li>
         </ul>
-      </section>
 
-      <section class="galery">
+
         <ul class="galery-list list">
-          <li class="galery-list-item">
-            <img src="./img/fotor.jpg" alt="fotoapp"  width="360"/>
-            <h2 class="galery-title">Banking App Interface Concept</h2>
-            <p class="galery-text">App</p>
+          <li class="galery-list-item ">
+            <a class="galery-img link" href="">
+              <img src="./img/fotor.jpg" alt="fotoapp"  width="360"/>
+              <h2 class="galery-title">Banking App Interface Concept</h2>
+              <p class="galery-text">App</p>
+            </a> 
+          </li>
+          <li class="galery-list-item ">
+            <a class="galery-img link" href="">
+              <img src="./img/telefo.jpg" alt="fotoapp"  width="360"/>
+              <h2 class="galery-title">Cashless Payment</h2>
+              <p class="galery-text">Marketing</p>
+            </a> 
           </li>
           <li class="galery-list-item">
-            <img src="./img/telefo.jpg" alt="fototel"  width="360"/>
-            <h2 class="galery-title">Cashless Payment</h2>
-            <p class="galery-text">Marketing</p>
-          </li>
-          <li class="galery-list-item">
+          <a class="galery-img link" href="">
             <img src="./img/laptop.jpg" alt="laptop"  width="360"/>
             <h2 class="galery-title">Meditaion App</h2>
             <p class="galery-text">App</p>
+          </a>
           </li>
           <li class="galery-list-item">
+          <a class="galery-img link" href="">
             <img src="./img/car.jpg" alt="car"  width="360"/>
             <h2 class="galery-title">Taxi Service</h2>
-            <p class="galery-text">Marketing</p>
+            <p class="galery-text">Marketing</p></a> 
+          </li>
+
+          <li class="galery-list-item">
+            <a class="galery-img link" href="">      
+              <img src="./img/tele.jpg" alt="telephone"  width="360"/>
+              <h2 class="galery-title">Screen Illustrations</h2>
+              <p class="galery-text">Design</p></a>
           </li>
           <li class="galery-list-item">
-            <img src="./img/tele.jpg" alt="telephone"  width="360"/>
-            <h2 class="galery-title">Screen Illustrations</h2>
-            <p class="galery-text">Design</p>
+            <a class="galery-img link" href="">  
+              <img src="./img/girl.jpg" alt="girl"  width="360"/>
+              <h2 class="galery-title">Online Courses</h2>
+              <p class="galery-text">Marketing</p></a>
           </li>
           <li class="galery-list-item">
-            <img src="./img/girl.jpg" alt="girl"  width="360"/>
-            <h2 class="galery-title">Online Courses</h2>
-            <p class="galery-text">Marketing</p>
+            <a class="galery-img link" href="">    
+              <img src="./img/foto.jpg" alt="foto"  width="360"/>
+              <h2 class="galery-title">Instagram Stories Concept</h2>
+              <p class="galery-text">Design</p></a>
           </li>
           <li class="galery-list-item">
-            <img src="./img/foto.jpg" alt="foto"  width="360"/>
-            <h2 class="galery-title">Instagram Stories Concept</h2>
-            <p class="galery-text">Design</p>
-          </li>
-          <li class="galery-list-item">
+           
+          <a class="galery-img link" href=""> 
             <img src="./img/lady.jpg" alt="lady"  width="360"/>
             <h2 class="galery-title">Organic Food</h2>
-            <p class="galery-text">Web Site</p>
+            <p class="galery-text">Web Site</p></a>
           </li>
           <li class="galery-list-item">
-            <img src="./img/coffe.jpg" alt="coffe" width="360" />
-            <h2 class="galery-title">Fresh Coffee</h2>
-            <p class="galery-text">Web Site</p>
+            <a class="galery-img link" href="">   
+              <img src="./img/coffe.jpg" alt="coffe" width="360" />
+              <h2 class="galery-title">Fresh Coffee</h2>
+              <p class="galery-text">Web Site</p></a>
+            <a class="galery-img link" href=""></a>
           </li>
         </ul>
       </section>
