--- a/portfolio.html
+++ b/portfolio.html
@@ -11,39 +11,42 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="node_modules/modern-normalize/modern-normalize.css">
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header class="header link">
-      <nav class="header-navigation">
-        <a class="logo link" href="./portfolio.html"
-          ><span class="web">WEB</span>STUDIO</a
-        >
-        <ul class="header-item list">
-          <li><a class="header-link link" href="./index.html">Studio</a></li>
-          <li>
-            <a class="header-link link" href="./portfolio.html">Portfolio</a>
-          </li>
-          <li><a class="header-link link" href="Contacts">Contacts</a></li>
-        </ul>
-      </nav>
-      <address>
-        <ul class="list">
-          <li class="address-item">
-            <a class="address-link link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="address-item">
-            <a class="address-link link" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
-    </header>
+    <header class="header link ">
+      <div class="container">
+        <nav class="header-navigation">
+          <a class="logo link" href="./portfolio.html"
+            ><span class="web">WEB</span>STUDIO</a>
+          <ul class="header-item list  ">
+            <li><a class="header-link link" href="./index.html">Studio</a></li>
+            <li>
+              <a class="header-link link" href="./portfolio.html">Portfolio</a>
+            </li>
+            <li><a class="header-link link" href="Contacts">Contacts</a></li>
+          </ul>
+        </nav>
+        <address class="address">
+          <ul class="list ">
+            <li class="address-item">
+              <a class="address-link link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="address-item">
+              <a class="address-link link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
+      </header>
     <main>
-      <section>
+      <section class="portfolio">
+        <div class="container">
       <h1 class="visually-hidden">Portfolio</h1>
         <ul class="filtr-btn list">
           <li>
@@ -64,6 +67,8 @@
             <button class="button-item" type="button">Marketing </button>          
           </li>
         </ul>
+ 
+
 
 
         <ul class="galery-list list">
@@ -128,17 +133,19 @@
             <a class="galery-img link" href=""></a>
           </li>
         </ul>
+      </div>
       </section>
     </main>
 
     <footer class="footer">
+      <div class="container">
       <a class="logo-footer link" href="./portfolio.html"
-        ><span class="web">WEB</span>STUDIO</a
-      >
+        ><span class="web">WEB</span>STUDIO</a>
       <p class="footer-title">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
+    </div>
     </footer>
   </body>
 </html>
