html portf rework

--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <header class="header link ">
-      <div class="container">
+      <div class="container header-contaiter">
         <nav class="header-navigation">
           <a class="logo link" href="./portfolio.html"
             ><span class="web">WEB</span>STUDIO</a>
@@ -29,16 +29,14 @@
           </ul>
         </nav>
         <address class="address">
-          <ul class="list ">
+          <ul class="address-header list">
             <li class="address-item">
               <a class="address-link link" href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
-              >
+                >info@devstudio.com</a>
             </li>
             <li class="address-item">
               <a class="address-link link" href="tel:+110001111111"
-                >+11 (000) 111-11-11</a
-              >
+                >+11 (000) 111-11-11</a>
             </li>
           </ul>
         </address>
@@ -67,9 +65,6 @@
             <button class="button-item" type="button">Marketing </button>          
           </li>
         </ul>
- 
-
-
 
         <ul class="galery-list list">
           <li class="galery-list-item ">
@@ -138,7 +133,7 @@
     </main>
 
     <footer class="footer">
-      <div class="container">
+      <div class="footer-text container">
       <a class="logo-footer link" href="./portfolio.html"
         ><span class="web">WEB</span>STUDIO</a>
       <p class="footer-title">
