--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body class="site-body">
     <!--section header-->
     <header class="header link ">
-    <div class="container">
+    <div class="container header-contaiter">
       <nav class="header-navigation">
         <a class="logo link" href="./portfolio.html"
           ><span class="web">WEB</span>STUDIO</a>
@@ -30,16 +30,14 @@
         </ul>
       </nav>
       <address class="address">
-        <ul class="list ">
+        <ul class="address-header list">
           <li class="address-item">
             <a class="address-link link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
+              >info@devstudio.com</a>
           </li>
           <li class="address-item">
             <a class="address-link link" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
+              >+11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
@@ -48,10 +46,10 @@
     <main>
     <!--Button-->
   
-      <section class="skills">
+      <section class="hero">
         <div class="container">        
-          <h1 class="heading-text">Effective Solutions for Your Business</h1>
-          <button class="button-header" type="button">Order service</button>
+          <h1 class="hero-text">Effective Solutions for Your Business</h1>
+          <button class="hero-button" type="button" >Order service</button>
         </div>
       </section>
 
@@ -120,7 +118,7 @@
       <h2 class="team-title">Our Team</h2>
       <ul class="team-list list">
         <li class="team-card">
-          <a class="link" href="">
+          <a class="team-box link" href="">
           <img
             src="./img/boy4.jpg"
             alt="Mark Guerrero"
@@ -172,10 +170,9 @@
     <!--section 5 under-->
 
     <footer class="footer">
-      <div class="container">
+      <div class="footer-text container">
       <a class="logo-footer link" href="./portfolio.html"
-        ><span class="web">WEB</span>STUDIO</a
-      >
+        ><span class="web">WEB</span>STUDIO</a>
       <p class="footer-title">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
