--- a/portfolio.html
+++ b/portfolio.html
@@ -11,16 +11,20 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="node_modules/modern-normalize/modern-normalize.css">
+    <link
+      rel="stylesheet"
+      href="node_modules/modern-normalize/modern-normalize.css"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header class="header link ">
+    <header class="header link">
       <div class="container header-contaiter">
         <nav class="header-navigation">
           <a class="logo link" href="./portfolio.html"
-            ><span class="web">WEB</span>STUDIO</a>
-          <ul class="header-item list  ">
+            ><span class="web">WEB</span>STUDIO</a
+          >
+          <ul class="header-item list">
             <li><a class="header-link link" href="./index.html">Studio</a></li>
             <li>
               <a class="header-link link" href="./portfolio.html">Portfolio</a>
@@ -32,115 +36,121 @@
           <ul class="address-header list">
             <li class="address-item">
               <a class="address-link link" href="mailto:info@devstudio.com"
-                >info@devstudio.com</a>
+                >info@devstudio.com</a
+              >
             </li>
             <li class="address-item">
               <a class="address-link link" href="tel:+110001111111"
-                >+11 (000) 111-11-11</a>
+                >+11 (000) 111-11-11</a
+              >
             </li>
           </ul>
         </address>
       </div>
-      </header>
+    </header>
     <main>
       <section class="portfolio">
         <div class="container">
-      <h1 class="visually-hidden">Portfolio</h1>
-        <ul class="filtr-btn list">
-          <li>
-            <button class="button-item" type="button">All</button>
-          </li>
-          <li>
-            <button class="button-item" type="button">Web side</button>
-          </li>
-          <li>
-            <button class="button-item" type="button">App</button>
+          <h1 class="visually-hidden">Portfolio</h1>
+          <ul class="filtr-btn list">
+            <li>
+              <button class="button-item" type="button">All</button>
+            </li>
+            <li>
+              <button class="button-item" type="button">Web side</button>
+            </li>
+            <li>
+              <button class="button-item" type="button">App</button>
+            </li>
+            <li>
+              <button class="button-item" type="button">Design</button>
+            </li>
+            <li>
+              <button class="button-item" type="button">Marketing</button>
+            </li>
+          </ul>
 
-          </li>
-          <li>
-            <button class="button-item" type="button">Design</button>
-         
-          </li>
-          <li>
-            <button class="button-item" type="button">Marketing </button>          
-          </li>
-        </ul>
+          <ul class="galery-list list">
+            <li class="galery-list-item">
+              <a class="galery-img link" href="">
+                <img src="./img/fotor.jpg" alt="fotoapp" width="360" />
+                <h2 class="galery-title">Banking App Interface Concept</h2>
+                <p class="galery-text">App</p>
+              </a>
+            </li>
+            <li class="galery-list-item">
+              <a class="galery-img link" href="">
+                <img src="./img/telefo.jpg" alt="fotoapp" width="360" />
+                <h2 class="galery-title">Cashless Payment</h2>
+                <p class="galery-text">Marketing</p>
+              </a>
+            </li>
+            <li class="galery-list-item">
+              <a class="galery-img link" href="">
+                <img src="./img/laptop.jpg" alt="laptop" width="360" />
+                <h2 class="galery-title">Meditaion App</h2>
+                <p class="galery-text">App</p>
+              </a>
+            </li>
+            <li class="galery-list-item">
+              <a class="galery-img link" href="">
+                <img src="./img/car.jpg" alt="car" width="360" />
+                <h2 class="galery-title">Taxi Service</h2>
+                <p class="galery-text">Marketing</p></a
+              >
+            </li>
 
-        <ul class="galery-list list">
-          <li class="galery-list-item ">
-            <a class="galery-img link" href="">
-              <img src="./img/fotor.jpg" alt="fotoapp"  width="360"/>
-              <h2 class="galery-title">Banking App Interface Concept</h2>
-              <p class="galery-text">App</p>
-            </a> 
-          </li>
-          <li class="galery-list-item ">
-            <a class="galery-img link" href="">
-              <img src="./img/telefo.jpg" alt="fotoapp"  width="360"/>
-              <h2 class="galery-title">Cashless Payment</h2>
-              <p class="galery-text">Marketing</p>
-            </a> 
-          </li>
-          <li class="galery-list-item">
-          <a class="galery-img link" href="">
-            <img src="./img/laptop.jpg" alt="laptop"  width="360"/>
-            <h2 class="galery-title">Meditaion App</h2>
-            <p class="galery-text">App</p>
-          </a>
-          </li>
-          <li class="galery-list-item">
-          <a class="galery-img link" href="">
-            <img src="./img/car.jpg" alt="car"  width="360"/>
-            <h2 class="galery-title">Taxi Service</h2>
-            <p class="galery-text">Marketing</p></a> 
-          </li>
-
-          <li class="galery-list-item">
-            <a class="galery-img link" href="">      
-              <img src="./img/tele.jpg" alt="telephone"  width="360"/>
-              <h2 class="galery-title">Screen Illustrations</h2>
-              <p class="galery-text">Design</p></a>
-          </li>
-          <li class="galery-list-item">
-            <a class="galery-img link" href="">  
-              <img src="./img/girl.jpg" alt="girl"  width="360"/>
-              <h2 class="galery-title">Online Courses</h2>
-              <p class="galery-text">Marketing</p></a>
-          </li>
-          <li class="galery-list-item">
-            <a class="galery-img link" href="">    
-              <img src="./img/foto.jpg" alt="foto"  width="360"/>
-              <h2 class="galery-title">Instagram Stories Concept</h2>
-              <p class="galery-text">Design</p></a>
-          </li>
-          <li class="galery-list-item">
-           
-          <a class="galery-img link" href=""> 
-            <img src="./img/lady.jpg" alt="lady"  width="360"/>
-            <h2 class="galery-title">Organic Food</h2>
-            <p class="galery-text">Web Site</p></a>
-          </li>
-          <li class="galery-list-item">
-            <a class="galery-img link" href="">   
-              <img src="./img/coffe.jpg" alt="coffe" width="360" />
-              <h2 class="galery-title">Fresh Coffee</h2>
-              <p class="galery-text">Web Site</p></a>
-            <a class="galery-img link" href=""></a>
-          </li>
-        </ul>
-      </div>
+            <li class="galery-list-item">
+              <a class="galery-img link" href="">
+                <img src="./img/tele.jpg" alt="telephone" width="360" />
+                <h2 class="galery-title">Screen Illustrations</h2>
+                <p class="galery-text">Design</p></a
+              >
+            </li>
+            <li class="galery-list-item">
+              <a class="galery-img link" href="">
+                <img src="./img/girl.jpg" alt="girl" width="360" />
+                <h2 class="galery-title">Online Courses</h2>
+                <p class="galery-text">Marketing</p></a
+              >
+            </li>
+            <li class="galery-list-item">
+              <a class="galery-img link" href="">
+                <img src="./img/foto.jpg" alt="foto" width="360" />
+                <h2 class="galery-title">Instagram Stories Concept</h2>
+                <p class="galery-text">Design</p></a
+              >
+            </li>
+            <li class="galery-list-item">
+              <a class="galery-img link" href="">
+                <img src="./img/lady.jpg" alt="lady" width="360" />
+                <h2 class="galery-title">Organic Food</h2>
+                <p class="galery-text">Web Site</p></a
+              >
+            </li>
+            <li class="galery-list-item">
+              <a class="galery-img link" href="">
+                <img src="./img/coffe.jpg" alt="coffe" width="360" />
+                <h2 class="galery-title">Fresh Coffee</h2>
+                <p class="galery-text">Web Site</p></a
+              >
+              <a class="galery-img link" href=""></a>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
     <footer class="footer">
       <div class="footer-text container">
-      <a class="logo-footer link" href="./portfolio.html"
-        ><span class="web">WEB</span>STUDIO</a>
-      <p class="footer-title">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
-    </div>
+        <a class="logo-footer link" href="./portfolio.html"
+          ><span class="web">WEB</span>STUDIO</a
+        >
+        <p class="footer-title">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
