home work updete

--- a/index.html
+++ b/index.html
@@ -29,11 +29,15 @@
             ><span class="web">WEB</span>STUDIO</a
           >
           <ul class="header-item list">
-            <li><a class="header-link link" href="./index.html">Studio</a></li>
-            <li>
+            <li class="navigation-list">
+              <a class="header-link link" href="./index.html">Studio</a>
+            </li>
+            <li class="navigation-list">
               <a class="header-link link" href="./portfolio.html">Portfolio</a>
             </li>
-            <li><a class="header-link link" href="Contacts">Contacts</a></li>
+            <li class="navigation-list">
+              <a class="header-link link" href="Contacts">Contacts</a>
+            </li>
           </ul>
         </nav>
         <address class="address">
@@ -121,57 +125,50 @@
     <section class="section-team">
       <div class="container">
         <h2 class="team-title">Our Team</h2>
-        <ul class="team-list list">
+        <ul class="team-list list ">
           <li class="team-card">
-            <a class="team-box link" href="">
               <img
                 src="./img/boy4.jpg"
                 alt="Mark Guerrero"
                 width="264"
                 height="260"
               />
+              <div class="team-box link">
               <h3 class="item-name">Mark Guerrero</h3>
-              <p class="item-info">Product Designer</p>
-            </a>
+              <p class="item-info">Product Designer</p> </div>
+          
           </li>
 
           <li class="team-card">
-            <a class="link" href="">
-              <img
-                src="./img/boy2.jpg"
-                alt="Tom Ford"
-                width="264"
-                height="260"
-              />
+            <img src="./img/boy2.jpg" alt="Tom Ford" width="264" height="260" />
+            <div class="team-box link">
               <h3 class="item-name">Tom Ford</h3>
               <p class="item-info">Frontend Developer</p>
-            </a>
+            </div>
           </li>
-
           <li class="team-card">
-            <a class="link" href="">
-              <img
-                src="./img/boy3.jpg"
-                alt="Camila Garcia"
-                width="264"
-                height="260"
-              />
+            <img
+              src="./img/boy3.jpg"
+              alt="Camila Garcia"
+              width="264"
+              height="260"
+            />
+            <div class="team-box link">
               <h3 class="item-name">Camila Garcia</h3>
               <p class="item-info">Marketing</p>
-            </a>
+            </div>
           </li>
-
           <li class="team-card">
-            <a class="link" href=""
-              ><img
-                src="./img/boy1.jpg"
-                alt="Daniel Wilson"
-                width="264"
-                height="260"
-              />
+            <img
+              src="./img/boy1.jpg"
+              alt="Daniel Wilson"
+              width="264"
+              height="260"
+            />
+            <div class="team-box link">
               <h3 class="item-name">Daniel Wilson</h3>
               <p class="item-info">UI Designer</p>
-            </a>
+            </div>
           </li>
         </ul>
       </div>
