--- a/portfolio.html
+++ b/portfolio.html
@@ -25,11 +25,15 @@
             ><span class="web">WEB</span>STUDIO</a
           >
           <ul class="header-item list">
-            <li><a class="header-link link" href="./index.html">Studio</a></li>
-            <li>
+            <li class="navigation-list">
+              <a class="header-link link" href="./index.html">Studio</a>
+            </li>
+            <li class="navigation-list">
               <a class="header-link link" href="./portfolio.html">Portfolio</a>
             </li>
-            <li><a class="header-link link" href="Contacts">Contacts</a></li>
+            <li class="navigation-list">
+              <a class="header-link link" href="Contacts">Contacts</a>
+            </li>
           </ul>
         </nav>
         <address class="address">
@@ -74,67 +78,84 @@
             <li class="galery-list-item">
               <a class="galery-img link" href="">
                 <img src="./img/fotor.jpg" alt="fotoapp" width="360" />
-                <h2 class="galery-title">Banking App Interface Concept</h2>
-                <p class="galery-text">App</p>
+                <div class="galery-box">
+                  <h2 class="galery-title">Banking App Interface Concept</h2>
+                  <p class="galery-text">App</p>
+                </div>
               </a>
             </li>
             <li class="galery-list-item">
               <a class="galery-img link" href="">
                 <img src="./img/telefo.jpg" alt="fotoapp" width="360" />
-                <h2 class="galery-title">Cashless Payment</h2>
-                <p class="galery-text">Marketing</p>
+                <div class="galery-box">
+                  <h2 class="galery-title">Cashless Payment</h2>
+                  <p class="galery-text">Marketing</p>
+                </div>
               </a>
             </li>
             <li class="galery-list-item">
               <a class="galery-img link" href="">
                 <img src="./img/laptop.jpg" alt="laptop" width="360" />
-                <h2 class="galery-title">Meditaion App</h2>
-                <p class="galery-text">App</p>
+                <div class="galery-box">
+                  <h2 class="galery-title">Meditaion App</h2>
+                  <p class="galery-text">App</p>
+                </div>
               </a>
             </li>
             <li class="galery-list-item">
               <a class="galery-img link" href="">
                 <img src="./img/car.jpg" alt="car" width="360" />
-                <h2 class="galery-title">Taxi Service</h2>
-                <p class="galery-text">Marketing</p></a
-              >
+                <div class="galery-box">
+                  <h2 class="galery-title">Taxi Service</h2>
+                  <p class="galery-text">Marketing</p>
+                </div>
+              </a>
             </li>
 
             <li class="galery-list-item">
               <a class="galery-img link" href="">
                 <img src="./img/tele.jpg" alt="telephone" width="360" />
-                <h2 class="galery-title">Screen Illustrations</h2>
-                <p class="galery-text">Design</p></a
-              >
+                <div class="galery-box">
+                  <h2 class="galery-title">Screen Illustrations</h2>
+                  <p class="galery-text">Design</p>
+                </div>
+              </a>
             </li>
             <li class="galery-list-item">
               <a class="galery-img link" href="">
                 <img src="./img/girl.jpg" alt="girl" width="360" />
-                <h2 class="galery-title">Online Courses</h2>
-                <p class="galery-text">Marketing</p></a
-              >
+                <div class="galery-box">
+                  <h2 class="galery-title">Online Courses</h2>
+                  <p class="galery-text">Marketing</p>
+                </div>
+              </a>
             </li>
             <li class="galery-list-item">
               <a class="galery-img link" href="">
                 <img src="./img/foto.jpg" alt="foto" width="360" />
-                <h2 class="galery-title">Instagram Stories Concept</h2>
-                <p class="galery-text">Design</p></a
-              >
+                <div class="galery-box">
+                  <h2 class="galery-title">Instagram Stories Concept</h2>
+                  <p class="galery-text">Design</p>
+                </div>
+              </a>
             </li>
             <li class="galery-list-item">
               <a class="galery-img link" href="">
                 <img src="./img/lady.jpg" alt="lady" width="360" />
-                <h2 class="galery-title">Organic Food</h2>
-                <p class="galery-text">Web Site</p></a
-              >
+                <div class="galery-box">
+                  <h2 class="galery-title">Organic Food</h2>
+                  <p class="galery-text">Web Site</p>
+                </div>
+              </a>
             </li>
             <li class="galery-list-item">
               <a class="galery-img link" href="">
                 <img src="./img/coffe.jpg" alt="coffe" width="360" />
-                <h2 class="galery-title">Fresh Coffee</h2>
-                <p class="galery-text">Web Site</p></a
-              >
-              <a class="galery-img link" href=""></a>
+                <div class="galery-box">
+                  <h2 class="galery-title">Fresh Coffee</h2>
+                  <p class="galery-text">Web Site</p>
+                </div>
+              </a>
             </li>
           </ul>
         </div>
