--- a/index.html
+++ b/index.html
@@ -125,18 +125,48 @@
     <section class="section-team">
       <div class="container">
         <h2 class="team-title">Our Team</h2>
-        <ul class="team-list list ">
+        <ul class="team-list list">
           <li class="team-card">
-              <img
-                src="./img/boy4.jpg"
-                alt="Mark Guerrero"
-                width="264"
-                height="260"
-              />
-              <div class="team-box link">
+            <img
+              src="./img/boy4.jpg"
+              alt="Mark Guerrero"
+              width="264"
+              height="260"
+            />
+            <div class="team-box link">
               <h3 class="item-name">Mark Guerrero</h3>
-              <p class="item-info">Product Designer</p> </div>
-          
+              <p class="item-info">Product Designer</p>
+              <ul class="team-soc-list list">
+                <li class="team-soc-item">
+                  <a href="" class="team-soc-link link"
+                    ><svg class="team-soc-icon" width="16px" height="16px">
+                      <use href="./img/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-soc-item">
+                  <a href="" class="team-soc-link link"
+                    ><svg class="team-soc-icon" width="16px" height="16px">
+                      <use href="./img/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-soc-item">
+                  <a href="" class="team-soc-link link"
+                    ><svg class="team-soc-icon" width="16px" height="16px">
+                      <use href="./img/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-soc-item">
+                  <a href="" class="team-soc-link link"
+                    ><svg class="team-soc-icon" width="16px" height="16px">
+                      <use href="./img/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+            </div>
           </li>
 
           <li class="team-card">
@@ -144,6 +174,36 @@
             <div class="team-box link">
               <h3 class="item-name">Tom Ford</h3>
               <p class="item-info">Frontend Developer</p>
+              <ul class="team-soc-list list">
+                <li class="team-soc-item">
+                  <a href="" class="team-soc-link link"
+                    ><svg class="team-soc-icon" width="16px" height="16px">
+                      <use href="./img/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-soc-item">
+                  <a href="" class="team-soc-link link"
+                    ><svg class="team-soc-icon" width="16px" height="16px">
+                      <use href="./img/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-soc-item">
+                  <a href="" class="team-soc-link link"
+                    ><svg class="team-soc-icon" width="16px" height="16px">
+                      <use href="./img/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-soc-item">
+                  <a href="" class="team-soc-link link"
+                    ><svg class="team-soc-icon" width="16px" height="16px">
+                      <use href="./img/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </div>
           </li>
           <li class="team-card">
@@ -156,6 +216,36 @@
             <div class="team-box link">
               <h3 class="item-name">Camila Garcia</h3>
               <p class="item-info">Marketing</p>
+              <ul class="team-soc-list list">
+                <li class="team-soc-item">
+                  <a href="" class="team-soc-link link"
+                    ><svg class="team-soc-icon" width="16px" height="16px">
+                      <use href="./img/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-soc-item">
+                  <a href="" class="team-soc-link link"
+                    ><svg class="team-soc-icon" width="16px" height="16px">
+                      <use href="./img/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-soc-item">
+                  <a href="" class="team-soc-link link"
+                    ><svg class="team-soc-icon" width="16px" height="16px">
+                      <use href="./img/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-soc-item">
+                  <a href="" class="team-soc-link link"
+                    ><svg class="team-soc-icon" width="16px" height="16px">
+                      <use href="./img/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </div>
           </li>
           <li class="team-card">
@@ -168,12 +258,67 @@
             <div class="team-box link">
               <h3 class="item-name">Daniel Wilson</h3>
               <p class="item-info">UI Designer</p>
+              <ul class="team-soc-list list">
+                <li class="team-soc-item">
+                  <a href="" class="team-soc-link link"
+                    ><svg class="team-soc-icon" width="16px" height="16px">
+                      <use href="./img/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-soc-item">
+                  <a href="" class="team-soc-link link"
+                    ><svg class="team-soc-icon" width="16px" height="16px">
+                      <use href="./img/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-soc-item">
+                  <a href="" class="team-soc-link link"
+                    ><svg class="team-soc-icon" width="16px" height="16px">
+                      <use href="./img/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-soc-item">
+                  <a href="" class="team-soc-link link"
+                    ><svg class="team-soc-icon" width="16px" height="16px">
+                      <use href="./img/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </div>
           </li>
         </ul>
       </div>
     </section>
     <!--section 5 under-->
+    <section class="client-containet">
+      <div class="client-pictures">
+        <h1 class="client-title">Costumers</h1>
+        <ul class="client-list">
+          <li class="client-items"><a href="" class="client-link link"><svg class="client-icon" width="104px" height="56px">
+            <use href="./img/icons.svg#icon-iconsix"></use>
+          </svg></a></li>
+          <li class="client-items"><a href="" class="client-link link"><svg class="client-icon" width="104px" height="56px">
+            <use href="./img/icons.svg#icon-iconfive"></use>
+          </svg></a></li>
+          <li class="client-items"><a href="" class="client-link link"><svg class="client-icon" width="104px" height="56px">
+            <use href="./img/icons.svg#icon-iconfour"></use>
+          </svg></a></li>
+          <li class="client-items"><a href="" class="client-link link"><svg class="client-icon" width="104px" height="56px">
+            <use href="./img/icons.svg#icon-iconthree"></use>
+          </svg></a></li>
+          <li class="client-items"><a href="" class="client-link link"><svg class="client-icon" width="104px" height="56px">
+            <use href="./img/icons.svg#icon-icontwo"></use>
+          </svg></a></li>
+          <li class="client-items"><a href="" class="client-link link"><svg class="client-icon" width="104px" height="56px">
+            <use href="./img/icons.svg#icon-icon"></use>
+          </svg></a></li>
+        </ul>
+      </div>
+    </section>
 
     <footer class="footer">
       <div class="footer-text container">
@@ -185,6 +330,41 @@
           digital marketing & growth solutions.
         </p>
       </div>
+
+      <div class="footer-link container">
+      <h2 class="media">Social media</h2>
+      <ul class="fot-list list">
+        <li class="fot-item">
+          <a href="" class="fot-link link"
+            ><svg class="fot-icon" width="24px" height="24px">
+              <use href="./img/icons.svg#icon-instagram"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="fot-item">
+          <a href="" class="fot-link link"
+            ><svg class="fot-icon" width="24px" height="24px">
+              <use href="./img/icons.svg#icon-twitter"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="fot-item">
+          <a href="" class="fot-link link"
+            ><svg class="fot-icon" width="24px" height="24px">
+              <use href="./img/icons.svg#icon-facebook"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="fot-item">
+          <a href="" class="fot-link link"
+            ><svg class="fot-icon" width="24px" height="24px">
+              <use href="./img/icons.svg#icon-linkedin"></use>
+            </svg>
+          </a>
+        </li>
+      </ul>
+    </div>
+       
     </footer>
   </body>
 </html>
